# Code_CVIU_2019

./: CMakeLists.txt  README.md  buildScript.sh
examples/: CMakeLists.txt  color_to_label.cpp  cv-script.cpp  cv_param.txt  file_storage.cpp  file_storage.hpp  gradientDescentTest.cpp  inference.cpp  inference_sparse.cpp  inference_sparse_synthetic.cpp  inference_sparse_synthetic_tree.cpp  inference_temp.cpp  inference_tree.cpp  msrc_test.m  test.cpp  toyExample.cpp  trial.cpp  trial_downsampleimage.cpp  visualize.m  voc_test.m
helper/: CMakeLists.txt  collate_stereo_results.py  collate_synthetic_results.py  generateRandom.py  hyperparam_search.py  parseSpearmintOp.py  parsefineGT.py  plotFW.py  splitCV.py  stereo_experiment_jobs.py  stereo_experiments_tree.sh  synthetic_experiment_jobs.py  temperature_plot.py  test.cpp  trial.cpp
include/: convexUpperBoundZ.h  densecrf.h  densecrf_utils.h  frankWolfe.h  pairwise.h  permutohedral.h  sparsecrf.h  submodular.h  test.h  tree_utils.h
src/: CMakeLists.txt  command.txt  debug_unary.py  densecrf.cpp  densecrf_test.cpp  densecrf_utils.cpp  eigen_trial.cpp  generateTrees.py  labelcompatibility.cpp  matrix_prod.cpp  pairwise.cpp  permutohedral.cpp  plotMarginals.py  read_matrix.cpp  sparsecrf.cpp  stereo_experiments.sh  stereo_experiments_tree.sh  stereo_param.txt  submodular.cpp  submodular_rhst.cpp  temp.cpp  test.cpp  tree_utils.cpp  trees.cpp  trees2.cpp  visualise_segment.cpp
